# Snake

./: CMakeLists.txt
cmake_modules/: FindSFML.cmake
headers/: Engine.hpp  SnakeSection.h
src/: Draw.cpp  Engine.cpp  Input.cpp  SnakeSection.cpp  main.cpp  update.cpp
